# Fern

./: CMakeLists.txt
Src/: CMakeLists.txt  Main.cpp
Src/Gui/Languages/: Languages.cmake  LanguagesResources.qrc
Src/Gui/Languages/MacOS/English/: MenuBar.json
Src/Gui/Languages/Windows/English/: MenuBar.json
Src/Gui/MainWindow/: Languages.h  MainWindow.cmake  MainWindow.cpp  MainWindow.h
Src/Gui/MenuBar/: MenuBar.cmake  MenuBar.cpp  MenuBar.h
Src/Gui/TitleWidget/: TitleWidget.cmake  TitleWidget.cpp  TitleWidget.h
Src/Gui/ToolBars/: ToolBars.cmake
